8691
You can add `withDefault`, `withDefaultValue` to the list:

{code}
def mapWithDefault(map: Map.WithDefault[Int,Int]) = null

val map1 = Map(1 -> 1).withDefaultValue(2)
val map2 = Map(1 -> 1).withDefaultValue(2).asInstanceOf[Map.WithDefault[Int,Int]]

mapWithDefault(map1)
<console>:10: error: type mismatch;
 found   : scala.collection.immutable.Map[Int,Int]
 required: Map.WithDefault[Int,Int]
              mapWithDefault(map)
                             ^

mapWithDefault(map2) // compiles
{code}

As far as I remember, Iterator/Iterable and views were also common offenders in the past.
